--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "sl-vue-tree",
-  "version": "1.8.5",
+  "name": "sl-vue-tree-next",
+  "version": "0.0.1",
   "description": "draggable tree vue component",
   "browserslist": "> 0.25%, not dead",
-  "main": "dist/sl-vue-tree.js",
-  "types": "dist/sl-vue-tree.d.ts",
+  "main": "dist/sl-vue-tree-next.js",
+  "types": "dist/sl-vue-tree-next.d.ts",
   "scripts": {
     "clear": "rimraf dist",
-    "build": "npm run clear && webpack-cli --progress --mode production",
-    "start": "npm run clear && webpack-cli --watch --progress --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "format": "prettier .  --write"
   },
   "keywords": [
     "vue",
@@ -20,16 +22,14 @@
   "author": "Holiber",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.4",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.21.1",
+    "prettier": "3.2.4",
     "rimraf": "^2.6.2",
-    "vue": "^2.5.16",
-    "vue-loader": "^14.2.2",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.1.2"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vue": "^3.4.15"
   }
 }
