--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noImplicitThis": true,
     "removeComments": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "./",
+    "outDir": "dist",
     "sourceMap": true,
     "allowJs": false,
     "strictNullChecks": false,
@@ -27,7 +27,7 @@
     }
   },
   "exclude": [
-    "node_modules"
+    "node_modules", "src/App.vue", "src/main.ts"
   ],
   "include": [ "src/**/*.ts", "src/**/*.vue", "src/**/*.d.ts"]
 }
