--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sl-vue-tree-next",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "draggable tree vue component",
     "browserslist": "> 0.25%, not dead",
     "type": "module",
@@ -40,9 +40,6 @@
     "peerDependencies": {
         "vue": "^3.0.0"
     },
-    "dependencies": {
-        "vue": "^3.4.15"
-    },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.3",
         "eslint": "^8.56.0",
@@ -52,6 +49,7 @@
         "rimraf": "^2.6.2",
         "typescript": "^5.3.3",
         "vite": "^5.0.12",
-        "vite-plugin-dts": "^3.7.2"
+        "vite-plugin-dts": "^3.7.2",
+        "vue": "^3.4.15"
     }
 }
