--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sl-vue-tree-next",
-    "version": "0.0.7",
+    "version": "0.0.8",
     "description": "draggable tree vue component",
     "browserslist": "> 0.25%, not dead",
     "type": "module",
@@ -43,21 +43,17 @@
         "draggable",
         "sortable"
     ],
-    "author": "Holiber",
+    "author": "kcsujeet",
     "license": "MIT",
-    "peerDependencies": {
-        "vue": "^3.3.4"
-    },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.3",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-vue": "^9.21.1",
         "prettier": "3.2.4",
-        "rimraf": "^2.6.2",
         "typescript": "^5.3.3",
         "vite": "^5.0.12",
         "vite-plugin-dts": "^3.7.2",
-        "vue": "^3.4.15"
+        "vue": "^3.4.18"
     }
 }
