--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "typescript": "^5.3.3",
         "vite": "^5.0.12",
         "vite-plugin-dts": "^3.7.2",
+        "vite-plugin-externals": "^0.6.2",
         "vue": "^3.4.18"
     }
 }
